from_home_part1_desktop

--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,14 +1,13 @@
-.place__website__link {
+.cover__subtitle {
+    margin: 0;
     color: #FFFFFF;
+    width: 360px;
     font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
-    text-decoration-line: underline;
-}
-
-.place__website__link:hover{
-    opacity: 0.5;
-    transition: all 0.1s ease-in;
+    text-align: center;
+    align-self: center;
+    padding-bottom: 245px;
 }
