--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,14 +1,14 @@
-.place__website__link {
+.footer__link {
     color: #FFFFFF;
     font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 18px;
-    line-height: 22px;
-    text-decoration-line: underline;
+    font-size: 16px;
+    line-height: 18px;
+    text-decoration: none;
 }
 
-.place__website__link:hover{
+.footer__link:hover{
     opacity: 0.5;
     transition: all 0.1s ease-in;
 }
