--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -12,3 +12,11 @@
     opacity: 0.5;
     transition: all 0.2s linear;
 }
+
+
+@media screen and (max-width: 400px) {
+    .header__lang-link {
+        font-size: 18px;
+        line-height: 1.33;
+    }
+}
