--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,3 +5,15 @@
     justify-content: space-between;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 768px) {
+    .header {
+        padding: 28px 24px 24px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .header {
+        padding: 16px 16px;
+    }
+}
