--- a/blocks/lead/__container/lead__container.css
+++ b/blocks/lead/__container/lead__container.css
@@ -4,3 +4,15 @@
     flex-direction: column;
     align-items: start;
 }
+
+@media screen and (max-width: 1024px) {
+    .lead__container {
+        margin: 0 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lead__container {
+        margin: 0 auto;
+    }
+}
