--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,9 +1,6 @@
 .place__website {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-content: flex-end;
     max-width: 456px;
     margin: 0;
     height: 46px;
+    align-self: end;
 }
