--- a/pages/index.css
+++ b/pages/index.css
@@ -33,10 +33,26 @@
 @import url(../blocks/place/place.css);
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__image/place__image.css);
-@import url(../blocks/place/__paragraph/place__paragraph.css);
 @import url(../blocks/place/__website/place__website.css);
 @import url(../blocks/place/__website/__link/place__website__link.css);
 @import url(../blocks/place/__website/__url-heading/place__website__url-heading.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place/__paragraph-text/place__paragraph-text.css);
+
+/* === cover === */
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/__background/cover__background.css);
+@import url(../blocks/cover/__container/cover__container.css);
+@import url(../blocks/cover/__link/cover__link.css);
+
+/* === footer === */
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__links/footer__links.css);
+
 
 /* ============= etc ============= */
 @import url(../blocks/page/page.css);
