--- a/blocks/header/__row-links/header__row-links.css
+++ b/blocks/header/__row-links/header__row-links.css
@@ -1,13 +1,7 @@
 .header__row-links {
     display: flex;
     flex-direction: row;
-    margin: 46px 0;
+    margin: 0;
     padding: 0;
     list-style: none;
-}
-
-@media screen and (max-width: 400px) {
-    .header__row-links {
-        margin-top: 30px;
-    }
 }
