--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,19 +1,20 @@
 .header {
     max-width: 1184px;
-    padding: 28px 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 0 auto;
+    padding: 28px 48px 0px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .header {
-        padding: 28px 24px 24px;
+        padding: 28px 24px 0;
     }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 767px) {
     .header {
-        padding: 16px 16px;
+        padding: 16px 16px 0;
     }
 }
