--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,5 +1,27 @@
 .intro {
     display: flex;
+    align-items: flex-start;
+    max-width: 984px;
     margin: 0 auto;
-    justify-content: flex-start;
+}
+
+
+@media screen and (max-width: 1025px) {
+    .intro {
+        margin: 0 48px;
+    }
+}
+
+@media screen and (max-width: 770px) {
+    .intro {
+        margin: 0;
+        padding: 0 24px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .intro {
+        margin: 0;
+        padding: 0 16px;
+    }
 }
