--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,11 +1,23 @@
 .lead__caption {
     color: #FFFFFF;
     margin: 8px 0 0;
+    font-size: 10px;
     max-width: 158px;
     line-height: 14px;
-    font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 10px;
     letter-spacing: 0.15em;
+}
+
+
+@media screen and (max-width: 770px) {
+    .lead__caption{
+        padding-left: 24px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .lead__caption{
+        padding-left: 16px;
+    }
 }
