--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -2,19 +2,5 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 984px;
-}
-
-
-
-@media screen and (max-width: 1024px) {
-    .lead__image {
-        max-width: 928px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .lead__image {
-        width: 768px;
-    }
+    width: 100%;
 }
