--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,12 +1,27 @@
 .lead__subtitle {
     color: #FFFFFF;
-    margin: 0 auto;
-    padding-bottom: 64px;
-    font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
+    margin: 0 auto 64px;
     max-width: 640px;
     font-size: 30px;
     font-style: normal;
     font-weight: 400;
     line-height: 36px;
     text-align: center;
+}
+
+@media screen and (max-width:1025px)
+{
+    .lead__subtitle {
+        margin: 0 auto;
+        padding-bottom: 56px;
+    }
+}
+
+@media screen  and (max-width: 720px){
+    .lead__subtitle {
+        font-size: 16px;
+        line-height: 1.25;
+        padding-bottom: 40px;
+        max-width: 288px;
+    }
 }
