--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,11 +2,19 @@
     color: #FFFFFF;
     margin: 0 auto;
     padding-bottom: 32px;
-    font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
     max-width: 720px;
     font-size: 96px;
     font-style: normal;
     font-weight: 900;
     line-height: 100px;
     text-align: center;
+}
+
+@media screen and (max-width:720px){
+    .lead__title {
+        font-size: 40px;
+        line-height: 1.1;
+        padding-bottom: 16px;
+        max-width: 288px;
+    }
 }
