--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,7 +3,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0;
     padding-top:56px;
+    max-width: 984px;
+    margin: 0 auto;
 }
 
+@media screen and (max-width: 1025px) {
+    .lead {
+        padding-top: 48px;
+        margin: 0 48px;
+    }
+}
+
+@media screen and (max-width: 770px) {
+    .lead {
+        margin: 0;
+    }
+}
