--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,9 +1,31 @@
 .photo-grid {
     max-width: 1184px;
     margin: 0 auto;
-    padding: 92px 0;
+    padding: 92px 48px;
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: repeat(3,1fr);
     gap:16px;
+}
+
+@media screen and (max-width: 1025px) {
+    .photo-grid {
+        grid-template-columns: repeat(3, 1fr);
+        gap:14px;
+        padding: 92px 24px 92px;
+    }
+}
+
+@media screen and (min-width: 400px) and (max-width: 770px)  {
+    .photo-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .photo-grid {
+        grid-template-columns: calc(100vw - 32px);
+        row-gap: 12px;
+        padding: 0 16px 64px;
+    }
 }
