--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,3 +4,9 @@
     height: 46px;
     align-self: end;
 }
+
+/* @media screen and (max-width: 660px) {
+    .place__website{
+        width: calc(100vw - 32px);
+    }
+} */
