--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,11 +1,37 @@
 .place {
     display: grid;
     gap: 48px 40px;
-    grid-template-columns: 460px minmax(min-content,max-content);
+    grid-template-columns: 1fr 1fr;
     padding-bottom: 80px;
     margin: 0;
 }
 
 .place:last-of-type {
     padding-bottom: 0;
+}
+
+@media screen and (max-width:1025px) {
+    .place {
+        grid-template-columns: 440px minmax(min-content,max-content);
+        column-gap: 32px;
+    }
+}
+
+@media screen and (max-width:870px) {
+    .place {
+        grid-template-columns: 340px minmax(min-content,max-content);
+    }
+}
+
+@media screen and (max-width:660px) {
+    .place {
+        grid-template-columns: minmax(min-content,max-content);
+        justify-items: center;
+    }
+}
+
+@media screen and (max-width:660px) and (max-height: 321px) {
+    .place {
+        grid-template-columns: 320px;
+    }
 }
