--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -15,8 +15,8 @@
     }
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 768px) {
     .lead {
-        margin: 0;
+        margin: 0 auto;
     }
 }
