--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,12 +2,7 @@
     display: grid;
     gap: 48px 40px;
     grid-template-columns: 1fr 1fr;
-    padding-bottom: 80px;
-    margin: 0;
-}
-
-.place:last-of-type {
-    padding-bottom: 0;
+    margin: 0 auto 80px;
 }
 
 @media screen and (max-width:1025px) {
@@ -17,21 +12,38 @@
     }
 }
 
-@media screen and (max-width:870px) {
+@media screen and (max-width:900px) {
+    .place {
+        grid-template-columns: 380px minmax(min-content,max-content);
+    }
+}
+
+@media screen and (max-width:800px) {
+    .place {
+        grid-template-columns: 350px minmax(min-content,max-content);
+    }
+}
+
+@media screen and (max-width:770px) {
     .place {
         grid-template-columns: 340px minmax(min-content,max-content);
+        gap: 48px 28px;
+        margin-bottom: 73px;
     }
 }
 
-@media screen and (max-width:660px) {
+@media screen and (max-width:650px) {
     .place {
         grid-template-columns: minmax(min-content,max-content);
-        justify-items: center;
+        gap:32px;
+        margin-bottom: 50px;
     }
 }
 
-@media screen and (max-width:660px) and (max-height: 321px) {
+
+@media screen and (max-width:320px) {
     .place {
         grid-template-columns: 320px;
+        font-size: 32px;
     }
 }
