--- a/blocks/place/__paragraph-text/place__paragraph-text.css
+++ b/blocks/place/__paragraph-text/place__paragraph-text.css
@@ -1,11 +1,20 @@
 .place__paragraph-text {
-    margin: 0;
-    padding: 0 0 26px;
     color: #FFFFFF;
+    margin: 0;
+    padding: 0;
     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
-    font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 163%;
+    line-height: 29px;
+}
+
+.place__paragraph-text:not(:first-of-type) {
+    margin-top: 26px;
+}
+
+@media screen and (max-width:770px) {
+    .place__paragraph-text {
+        font-size: 16px;
+        line-height: 26px;
+    }
 }
