--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,36 @@
 .places {
     display: grid;
     max-width: 984px;
-    margin: 0 auto 92px;
+    margin: 0 auto;
+    padding: 0 48px;
+}
+
+
+@media screen and (max-width:1025px) {
+    .places {
+        margin: 0 48px;
+        padding: 0;
+    }
+}
+
+@media screen and (max-width:820px) {
+    .places {
+        margin: 0 30px;
+    }
+}
+
+
+@media screen and (max-width:770px) {
+    .places {
+        margin: 0 24px;
+        padding: 0;
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width:320px) {
+    .places {
+        max-width: 100%;
+        margin: 0;
+    }
 }
