--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,8 +1,6 @@
 .cover__title {
     color: #FFFFFF;
     max-width: 560px;
-    font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
-    font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
@@ -11,4 +9,13 @@
     margin: 0;
     padding-top: 245px;
     padding-bottom: 32px;
+}
+
+@media screen and (max-width: 530px) {
+    .cover__title {
+        font-size: 32px;
+        max-width: 288px;
+        margin: 0 0 16px;
+        line-height: 1.09;
+    }
 }
