--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,3 +1,22 @@
 .cover {
     margin: 0 auto 92px;
 }
+
+
+@media(max-width: 1024px) {
+    .cover {
+        margin: 92px 0 92px;
+    }
+}
+
+@media(max-width: 768px) {
+    .cover {
+        margin: 90px 0 88px;
+    }
+}
+
+@media(max-width: 320px) {
+    .cover{
+        margin: 66px 0 64px;
+    }
+}
