--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,9 +1,14 @@
 .footer__copyright {
     margin: 0;
     color: #FFFFFF;
-    font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 16px;
+}
+
+@media screen and (max-width: 720px) {
+    .footer__copyright {
+        margin-top: 48px;
+    }
 }
