--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,7 +1,5 @@
 .footer__link {
     color: #FFFFFF;
-    font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
-    font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 18px;
@@ -9,6 +7,13 @@
 }
 
 .footer__link:hover{
-    opacity: 0.5;
+    opacity: 0.8;
     transition: all 0.1s ease-in;
+}
+
+@media screen and (max-width: 720px) {
+    .footer__link {
+        font-size: 24px;
+        line-height: 1.0;
+    }
 }
