--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,9 +1,13 @@
 .footer__links {
-    display: grid;
-    grid-template-columns: repeat(5, min-content);
-    gap:18px;
+    display: flex;
+    list-style: none;
     margin: 0;
     padding: 0;
-    text-decoration: none;
-    list-style-type: none;
+}
+
+@media screen and (max-width: 720px) {
+    .footer__links {
+        flex-direction: column;
+
+    }
 }
