--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,3 +5,27 @@
     justify-content: space-between;
     padding-bottom: 24px;
 }
+
+@media screen and (max-width: 1200px) {
+    .footer {
+        padding: 0 48px 24px;
+    }
+}
+
+@media screen and (max-width: 770px) {
+    .footer {
+        padding: 0 24px 24px;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .footer {
+        margin: 0;
+        padding: 0 0 24px 16px;
+        max-width: 186px;
+        min-height: 310px;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+}
