--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,3 +1,10 @@
 .place__paragraph {
     margin: 0;
 }
+
+@media screen and (max-width:320px) {
+    .place__paragraph {
+        max-width: calc(100% - 32px);
+        margin: 0 16px;
+    }
+}
