--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,12 +1,17 @@
 .place__website {
     max-width: 456px;
     margin: 0;
-    height: 46px;
     align-self: end;
 }
 
-/* @media screen and (max-width: 660px) {
+@media screen and (max-width: 680px) {
     .place__website{
-        width: calc(100vw - 32px);
+        width: calc(100vw - 40px);
     }
-} */
+}
+
+@media screen and (max-width: 320px) {
+    .place__website{
+        margin: 0 16px;
+    }
+}
