--- a/blocks/place/__paragraph-text/place__paragraph-text.css
+++ b/blocks/place/__paragraph-text/place__paragraph-text.css
@@ -1,10 +1,6 @@
 .place__paragraph-text {
     color: #FFFFFF;
-<<<<<<< HEAD
-    margin: 0 0 26px;
-=======
     margin: 0;
->>>>>>> origin/master
     padding: 0;
     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     font-weight: normal;
@@ -12,13 +8,12 @@
     line-height: 29px;
 }
 
-<<<<<<< HEAD
 .place__paragraph-text:last-child {
     margin-bottom: 0;
-=======
+}
+
 .place__paragraph-text:not(:first-of-type) {
     margin-top: 26px;
->>>>>>> origin/master
 }
 
 @media screen and (max-width:770px) {
@@ -27,13 +22,10 @@
         line-height: 26px;
     }
 }
-<<<<<<< HEAD
-
 @media screen and (max-width:320px) {
     .place__paragraph-text {
         font-size: 16px;
         line-height: 26px;
     }
 }
-=======
->>>>>>> origin/master
+
