--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -11,6 +11,6 @@
     position: relative;
 }
 
-div, p, h1, h2, h3, ul, li, a {
+/* div, p, h1, h2, h3, ul, li, a {
     outline: 1px red dashed;
-}
+} */
