--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,6 +1,56 @@
 .cover__background {
+    margin: 0;
+    display: flex;
+    position: relative;
+    flex-direction: column;
     background-image: url(../../../images/cover-trains.jpg);
-    max-width: 1184px;
     background-repeat: no-repeat;
+    width: 100%;
+    min-height: 740px;
+    box-sizing: border-box;
+    background-position: center;
+    justify-content: center;
+    align-items: center;
     background-size: cover;
+    z-index: 0;
+    text-decoration: none;
+}
+
+.cover__background:before {
+    content: '';
+    background: #2a2c2f;
+    opacity: 0.3;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: opacity 0.3s;
+}
+
+.cover__background:hover:before {
+    opacity: 0.8;
+}
+
+@media (max-width: 1024px) {
+    .cover__background {
+        min-height: 640px;
+    }
+}
+
+@media (max-width: 768px) {
+    .cover__background {
+        min-height: 480px;
+    }
+}
+
+@media (max-width: 530px) {
+    .cover__background {
+        min-height: 300px;
+    }
+}
+
+@media (max-width: 320px) {
+    .cover__background {
+        min-height: 200px;
+        justify-content: start;
+    }
 }
