--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,8 +7,7 @@
     text-align: center;
     align-self: center;
     margin: 0;
-    padding-top: 245px;
-    padding-bottom: 32px;
+    z-index: 5;
 }
 
 @media screen and (max-width: 530px) {
@@ -17,5 +16,11 @@
         max-width: 288px;
         margin: 0 0 16px;
         line-height: 1.09;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .cover__title {
+        margin: 33px 36px 0;
     }
 }
