--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,22 +1,26 @@
 .cover {
     margin: 0 auto 92px;
+    width: 100%;
+    padding: 0 48px 0;
+    box-sizing: border-box;
 }
 
-
-@media(max-width: 1024px) {
+@media screen and (max-width: 1024px) {
     .cover {
-        margin: 92px 0 92px;
+        margin:0 0 92px;
+        padding: 0;
     }
 }
 
-@media(max-width: 768px) {
+@media screen and (max-width: 768px) {
     .cover {
-        margin: 90px 0 88px;
+        margin-bottom: 88px;
     }
 }
 
-@media(max-width: 320px) {
+@media screen and (max-width: 320px) {
     .cover{
-        margin: 66px 0 64px;
+        margin: 0 0 33px;
+        padding: 0;
     }
 }
