--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,20 +3,20 @@
     margin: 0 auto;
     padding: 92px 48px;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(3,1fr);
-    gap:16px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 16px;
 }
 
 @media screen and (max-width: 1025px) {
     .photo-grid {
         grid-template-columns: repeat(3, 1fr);
-        gap:14px;
+        gap: 14px;
         padding: 92px 48px 92px;
     }
 }
 
-@media screen and (min-width: 400px) and (max-width: 770px)  {
+@media screen and (min-width: 400px) and (max-width: 770px) {
     .photo-grid {
         grid-template-columns: repeat(2, 1fr);
         padding: 88px 24px 88px;
