--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -14,3 +14,11 @@
         padding-top: 88px;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .intro__title {
+        padding-top: 64px;
+        font-size: 32px;
+        line-height: 90%;
+    }
+}
