--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,6 +3,11 @@
     font-size: 16px;
     line-height: 18px;
     text-decoration: none;
+    margin-right: 18px;
+}
+
+.footer__links-li:last-of-type {
+    margin: 0;
 }
 
 .footer__link:hover {
@@ -14,5 +19,6 @@
     .footer__link {
         font-size: 24px;
         line-height: 1.0;
+        margin-bottom: 32px;
     }
 }
