--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,11 +1,11 @@
-.place__website_link {
+.place__link {
     color: #FFFFFF;
     font-size: 18px;
     line-height: 22px;
     text-decoration-line: underline;
 }
 
-.place__website_link:hover {
+.place__link:hover {
     opacity: 0.8;
     transition: all 0.1s ease-in;
 }
