--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,9 +2,9 @@
     color: #FFFFFF;
     margin: 8px 0 0;
     font-size: 10px;
-    max-width: 158px;
     line-height: 14px;
     letter-spacing: 0.15em;
+    text-transform: uppercase;
 }
 
 
