--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,11 +1,12 @@
 .place__website {
-    max-width: 456px;
-    margin: 0;
-    align-self: end;
+  max-width: 456px;
+  margin: 0;
+  align-self: end;
 }
 
-@media screen and (max-width: 320px) {
-    .place__website {
-        margin: 0 16px;
-    }
+@media screen and (max-width: 767px) {
+  .place__website {
+      max-width: calc(100% - 32px);
+      margin: 0 16px;
+  }
 }
